@@ -1,3 +1,11 @@
+Thu Sep 10 07:07:01 UTC 2009  Yan Dai  <dai_y@ociweb.com>
+
+        * TAO_IDL/be/be_visitor_field/serializer_op_cs.cpp:
+        * TAO_IDL/be/be_visitor_sequence/serializer_op_cs.cpp:
+
+          Corrected code generation to count WChar size for wstring 
+          marshal size. 
+          
 Wed Sep  9 12:43:42 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
 
         * MPC/config/catiorlib.mpb:
